--- a/PMPS_Projekat_AjlaPuskarevic_EdinMustafic.ioc
+++ b/PMPS_Projekat_AjlaPuskarevic_EdinMustafic.ioc
@@ -50,37 +50,38 @@ Mcu.Pin10=PA6
 Mcu.Pin11=PA7
 Mcu.Pin12=PB2
 Mcu.Pin13=PB10
-Mcu.Pin14=PD12
-Mcu.Pin15=PD13
-Mcu.Pin16=PD14
-Mcu.Pin17=PD15
-Mcu.Pin18=PC7
-Mcu.Pin19=PA9
+Mcu.Pin14=PB12
+Mcu.Pin15=PD12
+Mcu.Pin16=PD13
+Mcu.Pin17=PD14
+Mcu.Pin18=PD15
+Mcu.Pin19=PC7
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA12
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PC10
-Mcu.Pin26=PC12
-Mcu.Pin27=PD4
-Mcu.Pin28=PD5
-Mcu.Pin29=PB3
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PC10
+Mcu.Pin27=PC12
+Mcu.Pin28=PD4
+Mcu.Pin29=PD5
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PB6
-Mcu.Pin31=PB9
-Mcu.Pin32=PE1
-Mcu.Pin33=VP_FATFS_VS_USB
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_USB_HOST_VS_USB_HOST_MSC_FS
+Mcu.Pin30=PB3
+Mcu.Pin31=PB6
+Mcu.Pin32=PB9
+Mcu.Pin33=PE1
+Mcu.Pin34=VP_FATFS_VS_USB
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_USB_HOST_VS_USB_HOST_MSC_FS
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=36
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -183,6 +184,8 @@ PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB10.Locked=true
 PB10.Signal=I2S2_CK
+PB12.Locked=true
+PB12.Signal=GPIO_Analog
 PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB2.GPIO_Label=BOOT1
 PB2.GPIO_Mode=GPIO_MODE_INPUT
@@ -338,8 +341,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=MyFirstSTMProject.ioc
-ProjectManager.ProjectName=MyFirstSTMProject
+ProjectManager.ProjectFileName=PMPS_Projekat_AjlaPuskarevic_EdinMustafic.ioc
+ProjectManager.ProjectName=PMPS_Projekat_AjlaPuskarevic_EdinMustafic
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
